# vhr-composite

./: .gitignore  README.md  README.rst  setup.cfg
.github/workflows/: build_docs.yml
docs/: conf.py  index.rst  modules.rst  vhr_composite.rst
examples/ethiopia/: composite_ethiopia_epoch1.yaml  landcover_composite_pipeline.py  slurm_composite.sh
examples/wooten/: composite.py  composite_senegal_etz_epoch2_11-05.yaml  landcover_composite_pipeline.py
latest/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  readme.html  search.html  searchindex.js
latest/.doctrees/: environment.pickle  index.doctree  modules.doctree  readme.doctree
latest/_modules/: index.html
scripts/general/: qa_confidence_calculation.py
scripts/senegal_calculate/: vhr_senegal_cas_grid_by_epoch_no_filtering.py  vhr_senegal_etz_grid_by_epoch.py  vhr_senegal_etz_grid_by_epoch_no_filtering.py  vhr_senegal_generate_grid.py  vhr_senegal_generate_grid_by_epoch.py
slurm/: run_composite  run_etz_composite  run_etz_sbatch_composite  run_sbatch_composite
tile_lists/: tile_0.txt  tile_1.txt  tile_10.txt  tile_11.txt  tile_12.txt  tile_13.txt  tile_14.txt  tile_15.txt  tile_16.txt  tile_17.txt  tile_18.txt  tile_19.txt  tile_2.txt  tile_20.txt  tile_21.txt  tile_22.txt  tile_23.txt  tile_24.txt  tile_25.txt  tile_26.txt  tile_27.txt  tile_28.txt  tile_29.txt  tile_3.txt  tile_30.txt  tile_31.txt  tile_32.txt  tile_33.txt  tile_4.txt  tile_5.txt  tile_6.txt  tile_7.txt  tile_8.txt  tile_9.txt
vhr_composite/: __init__.py
vhr_composite/model/: composite.py  (+7 more)
(+10 files in other folders)
