[metadata]
name = vhr-composite
version = attr: vhr_composite.__version__
author = Caleb S. Spradlin
author_email = caleb.s.spradlin@nasa.gov
url = https://github.com/nasa-nccs-hpda/vhr-composite
description = Very high resolution (VHR) Composite Tool
long_description = file: README.md
long_description_content_type = text/markdown
keywords = composite, rioxarray, rasterio
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    geopandas
    rioxarray
    xarray
    rasterio
    pandas
    numba
    numpy
    tqdm
